--- a/style.css
+++ b/style.css
@@ -1,13 +1,71 @@
 * {
-  margin: 0px;
+  margin: 0;
   padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  outline: none;
 }
-.name {
-  display: inline;
+
+a,
+button {
+  text-decoration: none;
 }
-.menu {
-  display: inline;
-  margin-left: auto;
+/*Navbar*/
+nav {
+  top: 0;
+
+  position: fixed;
+  width: 100%;
+  background-color: rgb(52 52 52);
+  display: flex;
+  font-size: 28px;
+  justify-content: space-between;
+  height: 75px;
+}
+.name,
+.menu a {
+  color: #fff;
+  margin: 20px 20px 20px 30px;
+  display: inline-block;
+  transition: 1s;
+}
+.menu a {
+  margin: 22px 30px 30px 30px;
+}
+#intro {
+  margin-top: 75px;
+}
+.introanim {
+  height: 20px;
+  transform-style: preserve-3d;
+  width: 200px;
+  animation: intanim 3s infinite ease-in-out;
+  background-color: wheat;
+  text-align: center;
+}
+.frontface {
+  position: absolute;
+  backface-visibility: hidden;
+  width: 200px;
+}
+.backface {
+  text-align: center;
+
+  position: absolute;
+  transform: rotateX(180deg);
+  backface-visibility: hidden;
+  scale: 1;
+}
+
+@keyframes intanim {
+  0% {
+    transform: rotateX(0deg);
+  }
+
+  50% {
+    transform: rotateX(180deg);
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
 }
