--- a/style.css
+++ b/style.css
@@ -5,13 +5,20 @@
   scroll-behavior: smooth;
   outline: none;
 }
+textarea {
+  resize: none;
+}
 body {
-  ackground-image: linear-gradient(to right, rgb(0, 0, 0), rgb(24, 36, 129));
-  /* background-image: url(images/backp.jpg);
+  /* background-image: linear-gradient(
+    to right,
+    rgb(239, 52, 52),
+    rgb(24, 36, 129)
+  ); */
+  background-image: url(https://img.freepik.com/free-vector/falling-stars-beautiful-night-background_23-2148273840.jpg?size=626&ext=jpg);
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed; */
+  background-attachment: fixed;
   /* background-position: center; */
 }
 a,
@@ -48,7 +55,7 @@ nav {
   padding: 14px 10px 0px 10px;
   margin: 0 10px 0 10px;
 }
-a:hover {
+nav a:hover {
   background-color: rgb(35, 35, 35);
   border-bottom: 1px solid white;
 }
@@ -118,7 +125,13 @@ a:hover {
 }
 /*About Me~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #about {
-  background-image: linear-gradient(to right, red, blue);
+  color: white;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(40, 40, 40),
+    black,
+    rgb(18, 18, 18)
+  );
 }
 .abouthead {
   width: 400px;
@@ -134,11 +147,12 @@ a:hover {
 .abouttext {
   width: 40vw;
   margin: 5vw;
+  font-size: 2vw;
 }
 .aboutimg {
   width: 40vw;
   margin: 5vw;
-  border-radius: 10%;
+  border-radius: 25px;
 }
 @media (max-width: 900px) {
   .aboutdiv {
@@ -154,16 +168,24 @@ a:hover {
 }
 /*Skills~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #skills {
-  background-image: linear-gradient(to right, blue, red);
+  color: white;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(18, 18, 18),
+    rgb(36, 36, 53),
+    black
+  );
+  /* height: 50vw; */
 }
 .skillHead {
   width: 400px;
-  font-size: 4rem;
+  font-size: 1rem;
   margin: auto;
   padding-top: 40px;
 }
 .skillRow {
-  margin: 10% auto;
+  margin: auto;
+  /* margin-bottom: 30px; */
   width: 60%;
   display: flex;
   flex-wrap: wrap;
@@ -176,8 +198,7 @@ a:hover {
   transition: transform 0.5s;
 }
 .ho:hover {
-  transform: translate(0, -10px);
-  transform: scale(1.1);
+  transform: scale(1.1) translate(0, -10px);
 }
 .ho1:hover {
   color: #e34c26;
@@ -192,7 +213,6 @@ a:hover {
   color: #563d7c;
 }
 .items {
-  margin: 10px;
   font-size: 10rem;
 }
 @media (max-width: 700px) {
@@ -200,20 +220,229 @@ a:hover {
     height: 200px;
     width: 250px;
   }
+  .skillshead {
+    text-align: center;
+  }
 }
 /*project~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#Project {
-  background-image: linear-gradient(to right, red, blue);
+#project {
+  color: white;
+  background-image: linear-gradient(
+    to bottom,
+    black,
+    rgb(31, 35, 31),
+    rgb(9, 9, 50),
+    rgb(15, 11, 11),
+    black
+  );
+  /* height: 2000px; */
 }
-.projectcontainer {
+div.listproj {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.projectcontainer {
+  /* border: 1px solid yellow; */
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  /* flex-direction: column; */
+  /* align-items: center; */
 }
 .projdisp {
-  width: 40vw;
-  margin: 5vw;
+  width: 45vw;
+  margin: 2.5vw;
+  border-radius: 20px;
 }
 .projdisc {
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
   width: 40vw;
-  margin: 5vw;
+  margin: 8vw 5vw 2vw 5vw;
 }
-@media (max-width: );
+.projtitle {
+  font-size: 4vw;
+  margin: 15px 10px;
+}
+.projinfo {
+  margin-bottom: 2vw;
+  font-size: 1rem;
+}
+.projcode {
+  font-size: 1.5rem;
+}
+.repoo,
+.repoo:visited {
+  transform: scale(1);
+  transition: transform 0.2s;
+}
+.repoo:hover {
+  cursor: pointer;
+  transform: scale(1.3);
+}
+.p2 {
+  flex-direction: row-reverse;
+}
+
+@media (max-width: 800px) {
+  .projecthead,
+  .contacthead {
+    text-align: center;
+    font-size: 2.4rem;
+  }
+  .projectcontainer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .projdisp {
+    width: 80vw;
+
+    /* margin: auto; */
+    margin: 3vw 10vw;
+  }
+  .projdisc {
+    width: 85vw;
+    margin-top: 0;
+  }
+  .projtitle {
+    font-size: 2rem;
+    margin-top: 6px;
+  }
+  .projcode {
+    font-size: 1rem;
+  }
+}
+/*contact~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#contact {
+  background-image: linear-gradient(
+    to bottom,
+    black,
+    rgb(35, 6, 33),
+    rgb(16, 16, 45)
+  );
+  color: white;
+}
+.contact1 {
+  margin-top: 20px;
+  display: flex;
+}
+
+.message {
+  width: 50%;
+  /* display: flex; */
+}
+.mss {
+  display: flex;
+  /* align-items: stretch; */
+  /* align-items: center; */
+}
+.message a {
+  width: 25vw;
+}
+.icn1 {
+  float: right;
+  margin: 20px;
+  transition: transform 0.4s;
+}
+.icn2 {
+  margin: 20px;
+  transform: scale(1);
+  transition: transform 0.4s;
+}
+.cwhatsapp,
+.ctelegram {
+  width: 10px;
+  margin: auto;
+}
+.icn1:hover {
+  transform: scale(1.3);
+  color: white;
+}
+.icn2:hover {
+  transform: scale(1.3);
+  color: rgb(69, 132, 157);
+}
+
+.email {
+  width: 50%;
+}
+.contact1 h1 {
+  text-align: center;
+}
+.formfield {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.259);
+  border-radius: 4px;
+}
+.f1,
+.f2,
+.f3 {
+  width: 30vw;
+
+  margin-left: 10vw;
+  margin-top: 15px;
+  height: 24px;
+}
+.f3 {
+  height: 40px;
+}
+::placeholder {
+  color: rgb(255, 228, 176);
+}
+.f4,
+.f5 {
+  width: 50px;
+  background-color: #7b44ce;
+  border: none;
+  cursor: pointer;
+  height: 20px;
+}
+.f4 {
+  margin-left: 17vw;
+}
+.f5 {
+  float: right;
+  margin-right: 17vw;
+}
+.contacticons {
+  margin-bottom: 20px;
+  margin-top: 30px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.contacticons a {
+  margin: 10px;
+  transition: transform 0.5s;
+}
+.contacticons a:hover {
+  transform: scale(1.3) translate(0, -10px);
+}
+
+@media (max-width: 800px) {
+  .contact1 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .email {
+    width: 90%;
+    /* margin: auto; */
+  }
+  .message {
+    width: 80%;
+    padding: 10px;
+  }
+  .formfield {
+    width: 80%;
+  }
+  .f4,
+  .f5 {
+    width: 20%;
+  }
+}
