--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
 }
 
 body {
-  background-image: linear-gradient(
-    to bottom,
-    rgb(122, 123, 168),
-    rgb(18, 18, 18) 20%
-  );
+  /* background-image: linear-gradient(
+    /* to bottom, */
+  /* rgb(122, 123, 168), */
+  /* rgb(18, 18, 18) 20% */
+  /* ); */
+  background-color: rgb(1, 141, 211);
   /* background-image: url(https://img.freepik.com/free-vector/falling-stars-beautiful-night-background_23-2148273840.jpg?size=626&ext=jpg);
 
   background-repeat: no-repeat;
@@ -20,6 +21,7 @@ body {
 }
 a,
 button {
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 ul {
@@ -28,50 +30,99 @@ ul {
 /*Navbar~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 nav {
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-}
-.cont {
-  margin: auto;
-  max-width: 800px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  font-size: 1.5em;
-  background-color: rgba(10, 10, 40, 0.8);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  padding-right: 10px;
-  /* max-height: 100px; */
+  justify-content: space-between;
+  /* background-color: #00baf0; */
+  background: linear-gradient(
+    to bottom,
+    rgb(26, 37, 49),
+    rgb(38, 54, 71),
+    rgb(37, 62, 88)
+  );
+  color: #fff;
+  height: 60px;
+  padding: 1em;
 }
-.namelogo {
-  margin: 10px 20px;
-  font-size: 1.7em;
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
 }
 nav li {
-  display: inline;
-
-  margin: 10px;
+  margin: 20px 40px;
 }
 nav a {
-  padding: 5px 9px;
-  color: white;
-  transition: all 0.6s;
+  font-size: 20px;
 }
-.navLink:hover {
-  background-color: rgb(122, 123, 168);
-  border-radius: 7px;
+.menu-button-container {
+  display: none;
+  /* height: 100%; */
+  width: 30px;
+  cursor: pointer;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
 }
-@media (max-width: 700px) {
-  .cont {
-    border-radius: 0;
+.menu-button img {
+  height: 40px;
+}
+#menu-toggle {
+  display: none;
+}
+
+@media (max-width: 850px) {
+  .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu li {
+    margin: 0 1rem;
+    /* position: absolute; */
+
+    font-size: 30px;
+    overflow: hidden;
+  }
+
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    /* border: 0; */
+    transition: height 400ms;
+  }
+  #menu-toggle:checked ~ .menu li {
+    /* border: 1px solid #333; */
+    height: 2.5em;
+    transition: height 600ms ease-out;
+  }
+  .menu li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: rgba(51, 51, 51, 0.781);
   }
 }
 /*Intro~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #intro {
   display: flex;
   height: 100vh;
+  justify-content: space-evenly;
 }
 .nameem:hover {
   color: rgb(63, 114, 209);
@@ -81,81 +132,113 @@ nav a {
   width: 50%;
   /* margin: auto; */
   margin-left: 40px;
-  margin-top: 200px;
+  margin-top: 250px;
   /* background-color: rgb(48, 48, 48); */
   /* height: 250px; */
   color: rgb(255, 255, 255);
 }
 #intro h2 {
-  font-size: 3vw;
+  font-size: 24px;
   text-align: left;
 }
-#intro p {
-  font-size: 5vw;
+.namee {
+  font-size: 58px;
   margin-top: 30px;
+}
+.domain {
+  font-size: 20px;
+  margin-top: 20px;
 }
 
 .introimg {
-  margin-top: 120px;
+  margin-top: 140px;
 
-  border-radius: 0 10% 0 10%;
-  display: inline;
-  height: 35vw;
+  /* border-radius: 0 10% 0 10%; */
+  /* display: inline; */
+  width: 400px;
 }
+
 @media (max-width: 900px) {
   #intro {
     flex-direction: column;
     align-items: center;
+    /* justify-content: space-between; */
+  }
+  .namee {
+    font-size: 40px;
   }
   #intro img {
-    /* margin-left: 5%; */
+    width: 95%;
     margin-top: 30px;
-    height: 80%;
-    width: 80%;
+    /* display: none; */
+    /* margin-left: 5%; */
+    /* margin-top: 30px; */
+    /* height: 80%; */
+    /* width: 80%; */
   }
 
-  #intro h2,
-  p {
+  .hello {
+    width: 100%;
+    /* margin: auto; */
+    margin: 120px auto;
+    margin-bottom: 0;
+  }
+  .namee {
+    /* font-size: 60px; */
+  }
+  #intro h2 {
+    text-align: center;
+  }
+  #intro p {
     text-align: center;
   }
 }
 /*About Me~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #about {
+  height: 100vh;
   color: white;
   background-image: linear-gradient(
     to bottom,
-    rgb(36, 36, 36),
-    black,
-    rgb(18, 18, 18)
+    rgb(85, 104, 198),
+    rgb(95, 124, 168),
+    rgb(90, 144, 198)
   );
 }
 .abouthead {
   width: 400px;
   font-size: 4rem;
   margin: auto;
-  padding-top: 40px;
+  padding-top: 20px;
+  text-align: center;
+  /* padding-top: 40px; */
 }
 .aboutdiv {
-  height: 80vh;
+  /* height: 80vh; */
+  margin-top: 20px;
+  /* flex-basis: 20px 40px; */
   /* border: 1px solid red; */
   display: flex;
 }
 .abouttext {
+  flex-shrink: 0;
   width: 40vw;
-  margin: 5vw;
-  font-size: 2vw;
+  margin: 10vw 5vw;
+  font-size: 1.3rem;
+  text-align: center;
 }
 .aboutimg {
   width: 40vw;
   margin: 5vw;
   border-radius: 25px;
 }
-@media (max-width: 900px) {
+@media (max-width: 850px) {
   .aboutdiv {
     flex-direction: column;
     align-items: center;
   }
+
   .abouttext {
+    margin-top: 2vw;
     width: 80vw;
   }
   .aboutimg {
@@ -164,6 +247,7 @@ nav a {
 }
 /*Skills~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #skills {
+  height: 80vh;
   color: white;
   background-image: linear-gradient(
     to bottom,
@@ -179,57 +263,90 @@ nav a {
   margin: auto;
   padding-top: 40px;
 }
-.skillRow {
+.skillbody {
+  margin-top: 50px;
+}
+.item {
   margin: auto;
-  /* margin-bottom: 30px; */
-  width: 60%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  /* width: min-content; */
+  /* height: ; */
+}
+.item p {
+  margin-left: 55px;
 }
 
-.ho {
-  cursor: pointer;
-  transform: scale(1);
-  transition: transform 0.5s;
+.meter {
+  width: 80%;
+  height: 20px;
+  max-width: 700px;
+  box-sizing: content-box;
+  position: relative;
+  margin: 10px 0 30px 50px;
+  background: #555;
+  border-radius: 25px;
+  padding: 10px;
+  box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.552);
 }
-.ho:hover {
-  transform: scale(1.1) translate(0, -10px);
+.fbar {
+  position: absolute;
+  width: 97%;
+  height: 50%;
+  background-color: rgba(255, 255, 255, 0.164);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
-.ho1:hover {
-  color: #e34c26;
+.meter > span {
+  z-index: 3;
+  position: absolute;
+  display: block;
+
+  width: 50%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(43, 194, 83);
+  background-image: linear-gradient(
+    to bottom,
+    rgb(43, 194, 83) 37%,
+    rgb(92, 243, 92) 69%
+  );
+
+  text-align: center;
+  animation-name: prog;
+  animation-duration: 2s;
 }
-.ho2:hover {
-  color: #2965f1;
-}
-.ho3:hover {
-  color: #f0db4f;
-}
-.ho4:hover {
-  color: #563d7c;
-}
-.items {
-  font-size: 10rem;
-}
-@media (max-width: 700px) {
-  .items {
-    height: 200px;
-    width: 250px;
+@keyframes prog {
+  from {
+    background-color: red;
   }
-  .skillshead {
-    text-align: center;
+  to {
+    background-color: green;
   }
 }
+.itemone span {
+  width: 75%;
+}
+.itemtwo span {
+  width: 50%;
+}
+.itemthree span {
+  width: 90%;
+}
+.itemfour span {
+  width: 50%;
+}
+
 /*project~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #project {
   color: white;
   background-image: linear-gradient(
     to bottom,
-    black,
-    rgb(31, 35, 31),
-    rgb(9, 9, 50),
-    rgb(15, 11, 11),
-    black
+    rgb(17, 17, 41),
+    rgb(11, 11, 40),
+    rgb(10, 10, 56)
   );
 }
 div.listproj {
@@ -321,6 +438,7 @@ div.listproj {
     black black,
     rgb(29, 29, 84)
   );
+
   color: white;
 }
 #contact h3 {
@@ -330,34 +448,38 @@ div.listproj {
 }
 
 form {
-  height: 320px;
-  width: 360px;
+  /* padding: 10px; */
+  width: 85%;
+  max-width: 450px;
   margin: auto;
-  background-color: rgb(57, 0, 57);
+  background-color: rgb(255, 254, 255);
   border-radius: 10px;
   margin-bottom: 100px;
 }
+label,
 .f1,
 .f2,
 .f3 {
   width: 340px;
   height: 30px;
-  margin: 10px 10px;
+  margin: 30px 20px;
 }
 .f3 {
   height: 70px;
-  resize: none;
+  /* resize: none; */
 }
 .formfield {
-  border: rgba(255, 255, 255, 0.642) 2px solid;
+  border: rgba(46, 39, 39, 0.742) 1px solid;
   border-radius: 4px;
-  background-color: rgb(122, 0, 122);
+  background-color: rgb(255, 222, 255);
+  /* text-align: initial; */
 }
 .f4,
 .f5 {
   height: 35px;
   width: 120px;
-  margin: 10px 29px;
+
+  margin: 10px auto;
   background-color: rgb(87, 0, 121);
   color: white;
   font-size: 16px;
@@ -368,12 +490,13 @@ form {
 }
 
 ::placeholder {
-  color: rgba(255, 255, 255, 0.655);
+  color: black;
   padding-left: 5px;
 }
 
 .contacticons {
-  margin-bottom: 20px;
+  /* margin-bottom: 10px; */
+  /* background-color: black; */
   margin-top: 30px;
   display: flex;
   width: 100%;
@@ -388,9 +511,7 @@ form {
   transform: scale(1.3) translate(0, -5px);
 }
 .fa-instagram:hover {
-  background: -webkit-linear-gradient(#8a3ab9, #bc2a8d, #fccc63, #fbad50);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: rgb(220, 145, 6);
 }
 .fa-github:hover {
   color: aliceblue;
@@ -400,4 +521,29 @@ form {
 }
 .fa-whatsapp:hover {
   color: white;
+}
+.foot {
+  text-align: center;
+  margin: 5px 0;
+}
+.footer {
+  width: 100%;
+  border-radius: 70% 70% 0 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  /* justify-content: space-between; */
+  align-items: center;
+  padding: 30px 10%;
+  box-shadow: 0 0 30px 0 #373737;
+  /* justify-content: center; */
+  /* align-content: center; */
+}
+.footer h1 {
+  margin-top: 20px;
+  text-align: center;
+}
+.footer hr {
+  border: none;
+  height: 0.5px;
+  width: auto;
+  background-color: white;
 }
