--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ ul {
 }
 /*Navbar~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 nav {
+  z-index: 1000;
   position: fixed;
   width: 100%;
   display: flex;
@@ -192,10 +193,61 @@ nav a {
   #intro p {
     text-align: center;
   }
+  .box {
+    margin: auto;
+  }
 }
+.box {
+  border-radius: 10px;
+  width: 30px;
+  height: 30px;
+  /* margin: auto; */
+  text-align: center;
+  word-wrap: unset;
+  overflow: hidden;
+  background-color: rgb(127, 223, 255);
+
+  animation: anime 1s cubic-bezier(0.16, 1, 0.3, 1) 1s forwards;
+}
+.box p {
+  color: #555;
+  padding-top: 10px;
+  opacity: 0;
+  font-size: 28px;
+  animation-name: txt;
+  animation-duration: 1s;
+  animation-delay: 1.5s;
+  animation-fill-mode: forwards;
+}
+@keyframes txt {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes anime {
+  0% {
+    width: 30px;
+    height: 30px;
+  }
+  50% {
+    width: 30px;
+    height: 50px;
+  }
+  100% {
+    width: 200px;
+    height: 50px;
+  }
+}
+
 /*About Me~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #about {
   height: 100vh;
+  /* width: 100vw; */
   color: white;
   background-image: linear-gradient(
     to bottom,
@@ -245,43 +297,57 @@ nav a {
     width: 70vw;
   }
 }
+@media (max-width: 400px) {
+  .abouttext {
+    /* margin-top: 2vw; */
+    font-size: 1rem;
+  }
+}
 /*Skills~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #skills {
-  height: 80vh;
+  height: 90vh;
   color: white;
   background-image: linear-gradient(
     to bottom,
     rgb(18, 18, 18),
-    rgb(36, 36, 53),
+    rgb(46, 36, 59),
+    rgb(46, 36, 59),
     black
   );
   /* height: 50vw; */
 }
-.skillHead {
-  width: 400px;
-  font-size: 1rem;
+.skillshead {
+  text-align: center;
+  font-size: 40px;
   margin: auto;
   padding-top: 40px;
+  /* margin-top: ; */
 }
 .skillbody {
   margin-top: 50px;
 }
 .item {
+  width: 720px;
   margin: auto;
   /* width: min-content; */
   /* height: ; */
 }
+@media (max-width: 800px) {
+  .item {
+    width: 90%;
+  }
+}
 .item p {
-  margin-left: 55px;
+  margin-left: 10px;
 }
 
 .meter {
-  width: 80%;
+  /* width: 80%; */
   height: 20px;
   max-width: 700px;
   box-sizing: content-box;
   position: relative;
-  margin: 10px 0 30px 50px;
+  margin: 10px 0 30px 0px;
   background: #555;
   border-radius: 25px;
   padding: 10px;
@@ -308,23 +374,16 @@ nav a {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   background-color: rgb(43, 194, 83);
-  background-image: linear-gradient(
-    to bottom,
-    rgb(43, 194, 83) 37%,
-    rgb(92, 243, 92) 69%
-  );
+  /* background-image: linear-gradient( */
+  /* to bottom, */
+  /* rgb(43, 194, 83) 37%, */
+  /* rgb(92, 243, 92) 69% */
+  /* );/ */
 
   text-align: center;
   animation-name: prog;
-  animation-duration: 2s;
-}
-@keyframes prog {
-  from {
-    background-color: red;
-  }
-  to {
-    background-color: green;
-  }
+  animation-duration: 1.5s;
+  animation-play-state: initial;
 }
 .itemone span {
   width: 75%;
@@ -339,6 +398,16 @@ nav a {
   width: 50%;
 }
 
+@keyframes prog {
+  0% {
+    width: 0;
+  }
+}
+@media (max-width: 500px) {
+  .skillshead {
+    font-size: 2em;
+  }
+}
 /*project~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #project {
   color: white;
@@ -358,8 +427,10 @@ div.listproj {
 .projectcontainer {
   display: flex;
   width: 100%;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border: 1px solid red;
+  border-radius: 5vw;
 }
 .projdisp {
   width: 45vw;
@@ -383,6 +454,11 @@ div.listproj {
 }
 .projcode {
   font-size: 1.5rem;
+}
+.repoo {
+  color: rgb(223, 79, 255);
+  width: max-content;
+  margin: auto;
 }
 .repoo,
 .repoo:visited {
@@ -458,8 +534,9 @@ form {
   display: flex;
   height: 500px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 .f1,
@@ -467,7 +544,8 @@ form {
 .f3 {
   width: 340px;
   height: 30px;
-  margin: 30px;
+
+  /* margin: 20px; */
 }
 .f3 {
   height: 70px;
@@ -483,11 +561,12 @@ form {
 .f5 {
   height: 35px;
   width: 120px;
-
-  margin: 10px;
+  padding-left: 5px;
+  /* margin: 10px; */
   background-color: rgb(255, 255, 255);
-  color: white;
+  color: black;
   font-size: 16px;
+  /* box-sizing: initial; */
 }
 .f4,
 .f5 :hover {
@@ -495,10 +574,18 @@ form {
 }
 
 ::placeholder {
-  color: black;
+  color: rgba(0, 0, 0, 0.514);
   padding-left: 5px;
+  /* padding: 1px 2px; */
 }
 
+@media (max-width: 400px) {
+  .f1,
+  .f2,
+  .f3 {
+    width: 80%;
+  }
+}
 .contacticons {
   /* margin-bottom: 10px; */
   /* background-color: black; */
@@ -551,4 +638,14 @@ form {
   height: 0.5px;
   width: auto;
   background-color: white;
+}
+
+@media (max-width: 400px) {
+  .contacticons a {
+    font-size: 0.5rem;
+  }
+  .footer {
+    font-size: 0.4em;
+    font-weight: normal;
+  }
 }
